Fix repeatable element spacing

--- a/components/com_jce/editor/libraries/css/src/ui.css
+++ b/components/com_jce/editor/libraries/css/src/ui.css
@@ -157,6 +157,9 @@
 }
 
 /* Repeatable */
+.uk-repeatable {
+    display: flex;
+}
 
 .uk-repeatable .uk-repeatable-create,
 .uk-repeatable .uk-repeatable-delete {
